--- a/contact.html
+++ b/contact.html
@@ -101,7 +101,7 @@
                     <h4>Let's Talk about Your Business</h4></div>
                 <div class="contact-form-box margin-30px-top">
                     <div class="no-margin-lr" id="success-contact-form" style="display: none;"></div>
-                    <form id="contactForm" method="post" class="contact-form" action="sendemail.php">
+                    <form id="contactForm" method="post" class="contact-form" action="https://getform.io/f/pamqvrra">
                         <div class="row">
                             <div class="col-md-12">
                                 <input type="text" class="medium-input" maxlength="50" placeholder="Name *" required="required" id="name" name="name">
